crates/ndc-postgres/tests/snapshots/tests__select_where_name_iregex.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 6
        },
        "Title": {
          "value": "Jagged Little Pill"
        }
      }
    ]
  }
]
