crates/ndc-postgres/tests/snapshots/tests__select_where_name_nsimilar.snap
---
source: crates/postgres-multitenant-ndc/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 1
        },
        "Title": {
          "value": "For Those About To Rock We Salute You"
        }
      },
      {
        "AlbumId": {
          "value": 4
        },
        "Title": {
          "value": "Let There Be Rock"
        }
      },
      {
        "AlbumId": {
          "value": 6
        },
        "Title": {
          "value": "Jagged Little Pill"
        }
      },
      {
        "AlbumId": {
          "value": 7
        },
        "Title": {
          "value": "Facelift"
        }
      },
      {
        "AlbumId": {
          "value": 8
        },
        "Title": {
          "value": "Warner 25 Anos"
        }
      }
    ]
  }
]
