crates/ndc-postgres/tests/snapshots/tests__select_where_name_similar.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": {
          "value": 2
        },
        "Title": {
          "value": "Balls to the Wall"
        }
      },
      {
        "AlbumId": {
          "value": 3
        },
        "Title": {
          "value": "Restless and Wild"
        }
      },
      {
        "AlbumId": {
          "value": 5
        },
        "Title": {
          "value": "Big Ones"
        }
      },
      {
        "AlbumId": {
          "value": 12
        },
        "Title": {
          "value": "BackBeat Soundtrack"
        }
      },
      {
        "AlbumId": {
          "value": 16
        },
        "Title": {
          "value": "Black Sabbath"
        }
      }
    ]
  }
]
