crates/ndc-postgres/tests/snapshots/tests__select_where_variable.snap
---
source: crates/ndc-postgres/tests/tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": {
          "value": "Garage Inc. (Disc 1)"
        }
      },
      {
        "Title": {
          "value": "Garage Inc. (Disc 2)"
        }
      }
    ]
  },
  {
    "rows": [
      {
        "Title": {
          "value": "Beyond Good And Evil"
        }
      }
    ]
  }
]
